--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <Space
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="30" />
+        android:layout_weight="8" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -22,7 +22,7 @@
         <Space
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="7" />
+            android:layout_weight="5" />
 
         <TextView
             android:layout_width="match_parent"
@@ -32,87 +32,115 @@
             android:text="students"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
-        <EditText
-            android:id="@+id/etNAME"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="8"
-            android:ems="10"
-            android:hint="Name"
-            android:inputType="textPersonName" />
+            android:layout_weight="50"
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/etADD"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8"
-            android:ems="10"
-            android:hint="Address"
-            android:inputType="textPersonName" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="50"
+                android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/etNUM"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8"
-            android:ems="10"
-            android:hint="Phone Number"
-            android:inputType="phone" />
+                <EditText
+                    android:id="@+id/etNAME"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="8"
+                    android:ems="10"
+                    android:hint="Name"
+                    android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/etHnum"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8"
-            android:ems="10"
-            android:hint="Home Number"
-            android:inputType="phone" />
+                <EditText
+                    android:id="@+id/etADD"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="8"
+                    android:ems="10"
+                    android:hint="Address"
+                    android:inputType="textPersonName" />
 
-        <EditText
-            android:id="@+id/etMNAME"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8"
-            android:ems="10"
-            android:hint="Mom's Name"
-            android:inputType="textPersonName" />
+                <EditText
+                    android:id="@+id/etNUM"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="8"
+                    android:ems="10"
+                    android:hint="Phone Number"
+                    android:inputType="phone" />
 
-        <EditText
-            android:id="@+id/etMNUM"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8"
-            android:ems="10"
-            android:hint="Mom's Number"
-            android:inputType="phone" />
+                <EditText
+                    android:id="@+id/etHnum"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="8"
+                    android:ems="10"
+                    android:hint="Home Number"
+                    android:inputType="phone" />
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/etDNAME"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8"
-            android:ems="10"
-            android:hint="Dad's Name"
-            android:inputType="textPersonName" />
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5" />
 
-        <EditText
-            android:id="@+id/etDNUM"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8"
-            android:ems="10"
-            android:hint="Dad's number"
-            android:inputType="phone" />
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="50"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/etMNAME"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="8"
+                    android:ems="10"
+                    android:hint="Mom's Name"
+                    android:inputType="textPersonName" />
+
+                <EditText
+                    android:id="@+id/etMNUM"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="8"
+                    android:ems="10"
+                    android:hint="Mom's Number"
+                    android:inputType="phone" />
+
+                <EditText
+                    android:id="@+id/etDNAME"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="8"
+                    android:ems="10"
+                    android:hint="Dad's Name"
+                    android:inputType="textPersonName" />
+
+                <EditText
+                    android:id="@+id/etDNUM"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="8"
+                    android:ems="10"
+                    android:hint="Dad's number"
+                    android:inputType="phone" />
+            </LinearLayout>
+
+        </LinearLayout>
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="4" />
+            android:layout_weight="5" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="9"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <Space
@@ -124,8 +152,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:onClick="enter"
-                android:text="enter" />
+                android:onClick="sumbit"
+                android:text="sumbit" />
 
             <Space
                 android:layout_width="wrap_content"
@@ -143,5 +171,5 @@
     <Space
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="30" />
+        android:layout_weight="8" />
 </LinearLayout>
