--- a/app/src/main/res/layout/activity_grades.xml
+++ b/app/src/main/res/layout/activity_grades.xml
@@ -25,13 +25,17 @@
             android:layout_weight="10" />
 
         <TextView
-            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="12"
             android:gravity="center"
             android:text="Grades:"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="10" />
 
         <EditText
             android:id="@+id/etNAME"
@@ -63,12 +67,13 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="9" />
+            android:layout_weight="30" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="25"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <Space
@@ -77,12 +82,11 @@
                 android:layout_weight="1" />
 
             <Button
-                android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:onClick="entergrades"
-                android:text="enter" />
+                android:onClick="sumbitg"
+                android:text="sumbit" />
 
             <Space
                 android:layout_width="wrap_content"
